--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="l1.jpg" alt="Your Company Logo">
+            <img src="./images/l1.jpg" alt="Your Company Logo">
             <h1> Repute CNC Technologies </h1>
         </div>
         <nav>
@@ -36,32 +36,32 @@
             <h2>Our Services</h2>
             <div class="service-list">
                 <div class="service-item">
-                    <img src="im1.jpg" alt="CNC Milling" style="width: 320px; height: 200px;">
+                    <img src="./images/im1.jpg" alt="CNC Milling" style="width: 320px; height: 200px;">
                     <h3>CNC Milling</h3>
                     <p>High-speed and precise milling for complex geometries.</p>
                 </div>
                 <div class="service-item">
-                    <img src="im2.jpg" alt="CNC Turning" style="width: 320px; height: 200px;">
+                    <img src="./images/im2.jpg" alt="CNC Turning" style="width: 320px; height: 200px;">
                     <h3>CNC Turning</h3>
                     <p>Accurate turning of cylindrical and complex parts.</p>
                 </div>
                 <div class="service-item">
-                    <img src="im3.jpg" alt="EDM Machining" style="width: 320px; height: 200px;">
+                    <img src="./images/im3.jpg" alt="EDM Machining" style="width: 320px; height: 200px;">
                     <h3>EDM Machining</h3>
                     <p>Electrical discharge machining for intricate shapes and hard materials.</p>
                 </div>
                 <div class="service-item">
-                    <img src="im4.jpg" alt="Prototyping" style="width: 320px; height: 200px;">
+                    <img src="./images/im4.jpg" alt="Prototyping" style="width: 320px; height: 200px;">
                     <h3>Prototyping</h3>
                     <p>Fast and efficient prototyping to validate your designs.</p>
                 </div>
                 <div class="service-item">
-                    <img src="im5.jpg" alt="Assembly Services" style="width: 320px; height: 200px;">
+                    <img src="./images/im5.jpg" alt="Assembly Services" style="width: 320px; height: 200px;">
                     <h3>Assembly Services</h3>
                     <p>Complete assembly services for your manufactured components.</p>
                 </div>
                 <div class="service-item">
-                    <img src="im6.jpg" alt="CAD/CAM Support" style="width: 320px; height: 200px;">
+                    <img src="./images/im6.jpg" alt="CAD/CAM Support" style="width: 320px; height: 200px;">
                     <h3>CAD/CAM Support</h3>
                     <p>Expert design and programming support for optimal manufacturing.</p>
                 </div>
@@ -109,20 +109,20 @@
         <section id="gallery" class="gallery">
             <h2>Our Gallery</h2>
             <div class="gallery-grid">
-                <img src="cnc1.jpg" alt="CNC Machined Part 1">
-                <img src="cnc2.jpg" alt="CNC Machined Part 2">
-                <img src="cnc3.jpg" alt="CNC Machined Part 3">
-                <img src="cnc4.jpg" alt="CNC Machined Part 4">
-                <img src="cnc5.jpg" alt="CNC Machined Part 5">
-                <img src="cnc9.jpg" alt="CNC Machined Part 6">
-                <img src="cnc7.jpg" alt="CNC Machined Part 7">
-                <img src="cnc8.jpg" alt="CNC Machined Part 8">
+                <img src="./images/cnc1.jpg" alt="CNC Machined Part 1">
+                <img src="./images/cnc2.jpg" alt="CNC Machined Part 2">
+                <img src="./images/cnc3.jpg" alt="CNC Machined Part 3">
+                <img src="./images/cnc4.jpg" alt="CNC Machined Part 4">
+                <img src="./images/cnc5.jpg" alt="CNC Machined Part 5">
+                <img src="./images/cnc7.jpg" alt="CNC Machined Part 6">
+                <img src="./images/cnc8.jpg" alt="CNC Machined Part 7">
+                <img src="./images/cnc9.jpg" alt="CNC Machined Part 8">
                 </div>
         </section>
 
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
-            <p>Get in touch with us to discuss your CNC manufacturing needs.</p>
+            <p id="Contact-title">Get in touch with us to discuss your CNC manufacturing needs.</p>
             <div class="contact-form">
                 <form action="#" method="POST">
                     <div class="form-group">
