--- a/index.html
+++ b/index.html
@@ -15,146 +15,20 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#capabilities">Capabilities</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-    </header>
+    </header
 
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1> Repute CNC Technologies </h1>
-                <p>Delivering high-quality, custom CNC machined parts with accuracy and efficiency.</p>
-                <a href="#contact" class="button">Get a Quote</a>
-            </div>
-        </section>
-
-        <section id="services" class="services">
-            <h2>Our Services</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <img src="./images/im1.jpg" alt="CNC Milling" style="width: 320px; height: 200px;">
-                    <h3>CNC Milling</h3>
-                    <p>High-speed and precise milling for complex geometries.</p>
-                </div>
-                <div class="service-item">
-                    <img src="./images/im2.jpg" alt="CNC Turning" style="width: 320px; height: 200px;">
-                    <h3>CNC Turning</h3>
-                    <p>Accurate turning of cylindrical and complex parts.</p>
-                </div>
-                <div class="service-item">
-                    <img src="./images/im3.jpg" alt="EDM Machining" style="width: 320px; height: 200px;">
-                    <h3>EDM Machining</h3>
-                    <p>Electrical discharge machining for intricate shapes and hard materials.</p>
-                </div>
-                <div class="service-item">
-                    <img src="./images/im4.jpg" alt="Prototyping" style="width: 320px; height: 200px;">
-                    <h3>Prototyping</h3>
-                    <p>Fast and efficient prototyping to validate your designs.</p>
-                </div>
-                <div class="service-item">
-                    <img src="./images/im5.jpg" alt="Assembly Services" style="width: 320px; height: 200px;">
-                    <h3>Assembly Services</h3>
-                    <p>Complete assembly services for your manufactured components.</p>
-                </div>
-                <div class="service-item">
-                    <img src="./images/im6.jpg" alt="CAD/CAM Support" style="width: 320px; height: 200px;">
-                    <h3>CAD/CAM Support</h3>
-                    <p>Expert design and programming support for optimal manufacturing.</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="capabilities" class="capabilities">
-            <h2>Our Capabilities</h2>
-            <div class="capability-list">
-                <div class="capability-item">
-                    <h3>Materials</h3>
-                    <p>We work with a wide range of materials including:</p>
-                    <ul>
-                        <li>Aluminum Alloys</li>
-                        <li>Steel Alloys</li>
-                        <li>Stainless Steel</li>
-                        <li>Brass & Bronze</li>
-                        <li>Plastics (ABS, PC, POM, etc.)</li>
-                    </ul>
-                </div>
-                <div class="capability-item">
-                    <h3>Equipment</h3>
-                    <p>Our state-of-the-art facility is equipped with advanced CNC machines, including:</p>
-                    <ul>
-                        <li>Multi-axis Milling Centers</li>
-                        <li>High-Precision Lathes</li>
-                        <li>Wire EDM Machines</li>
-                        <li>Surface Grinders</li>
-                        <li>Quality Control Equipment</li>
-                    </ul>
-                </div>
-                <div class="capability-item">
-                    <h3>Quality Assurance</h3>
-                    <p>We adhere to strict quality control standards to ensure the accuracy and consistency of our parts. Our processes include:</p>
-                    <ul>
-                        <li>Dimensional Inspection</li>
-                        <li>Surface Finish Analysis</li>
-                        <li>Material Certification</li>
-                        <li>First Article Inspection</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section id="gallery" class="gallery">
-            <h2>Our Gallery</h2>
-            <div class="gallery-grid">
-                <img src="./images/cnc1.jpg" alt="CNC Machined Part 1">
-                <img src="./images/cnc2.jpg" alt="CNC Machined Part 2">
-                <img src="./images/cnc3.jpg" alt="CNC Machined Part 3">
-                <img src="./images/cnc4.jpg" alt="CNC Machined Part 4">
-                <img src="./images/cnc5.jpg" alt="CNC Machined Part 5">
-                <img src="./images/cnc7.jpg" alt="CNC Machined Part 6">
-                <img src="./images/cnc8.jpg" alt="CNC Machined Part 7">
-                <img src="./images/cnc9.jpg" alt="CNC Machined Part 8">
-                </div>
-        </section>
-
-        <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p id="Contact-title">Get in touch with us to discuss your CNC manufacturing needs.</p>
-            <div class="contact-form">
-                <form action="#" method="POST">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone:</label>
-                        <input type="tel" id="phone" name="phone">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="button">Send Inquiry</button>
-                </form>
-            </div>
-            <div class="contact-info">
-                <h3>Rangareddy Dist,Telangana-501359</h3>
-                <p>Plot No.S-64, E-City Raviryala(V), Maheshwaram(M)</p>
-                <p>Email: <a href="mailto:reputecnc7@gmail.com">reputecnc7@gmail.com</a></p>
-                <p>Phone: 📞 <a href="tel:+919100505317">+91 9100505317</a></p>
-                <p>
-                    <a href="https://wa.me/919100505317" target="_blank">
-                        <img src="w1.svg" alt="WhatsApp" style="width: 24px; height: 24px; vertical-align: middle;">
-                         Chat with us on WhatsApp
-                    </a>
-                </p>
+                <h1>Welcome to Repute CNC Technologies</h1>
+                <p>Delivering high-quality, custom CNC machined parts with precision and efficiency.</p>
+                <a href="contact.html" class="button">Get a Quote</a>
             </div>
         </section>
     </main>
