--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p>&copy; 2025 Repute CNC Technologies Company. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
